[package]
name = "i-slint-backend-baseview"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
i-slint-core = { version = "=1.1.0", path = "../../../internal/core" }
i-slint-core-macros = { version = "=1.1.0", path = "../../../internal/core-macros" }
i-slint-common = { version = "=1.1.0", path = "../../../internal/common" }
baseview = { git = "https://github.com/RustAudio/baseview.git", features = [
  "opengl",
] }
i-slint-renderer-femtovg = { version = "=1.1.0", path = "../../renderers/femtovg" }
once_cell = "1.5"
rtrb = "0.2.3"
